--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <div id="popup">
         <div class="popup-title">TRANSACTION VERIFIED</div>
         
-        <div style="font-size: 1.5rem; font-weight: bold; margin-bottom: 10px;">RECIPIENT: Tina Mercado</div>
+        <div style="font-size: 1.5rem; font-weight: bold; margin-bottom: 10px;">RECIPIENT:  Area Community Citizens</div>
         <div style="font-size: 1.5rem; color: var(--accent); margin-bottom: 10px;">AMOUNT: &nbsp; PHP 1,500.00</div>
         <div style="color: var(--dim); margin-bottom: 20px;">TAG: &nbsp; &nbsp; &nbsp; MEDICAL AID / EDUCATIONAL</div>
         <div style="color: #00ff00; font-weight: bold; font-size: 1.2rem; text-align: center; margin-bottom: 10px;">STATUS: FUNDS RELEASED</div>
